# VirtualLimb

./: README.md
ViLimbs_Controller/ViLimbs_WriteCommands/: CMakeLists.txt
ViLimbs_Controller/ViLimbs_WriteCommands/app/: CMakeLists.txt  ViLimbs_Console.cpp
ViLimbs_Controller/ViLimbs_WriteCommands/app/CommunicationModule/: Communication_WinSock.cpp  Communication_WinSock.h
ViLimbs_Controller/ViLimbs_WriteCommands/app/emotivController/: emotivController.h
ViLimbs_Controller/ViLimbs_WriteCommands/app/myoController/: myoController.cpp  myoController.h
ViLimbs_Linux/src_ViLimbs/: CMakeLists.txt  README  main.cpp
ViLimbs_Linux/src_ViLimbs/data/: ogre.cfg  plugins.cfg
ViLimbs_Linux/src_ViLimbs/src/: Server.cpp  Server.h  vr.cpp  vr.h
machine_learning/: classification.R  filtering.R
